[project]
name = "yeonji"
version = "1.0.0"
description = "Collection of command line tools"
readme = "./README.md"
requires-python = ">=3.6"
license = { file="./LICENSE" }
authors = [ { name="Johannes Krattenmacher", email="yeonji@dev.krateng.ch" } ]

urls.repository = "https://github.com/krateng/yeonji"
urls.documentation = "https://github.com/krateng/yeonji"

keywords = ["scripts", "commandline"]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent"
]

dependencies = [
	"tabulate",
	"send2trash",
	"doreah>=1.6.11",
	"unidecode",
	"emoji",
	"yt-dlp"
]

[project.scripts]
borgsize =	"yeonji.borgsize:main"
flacco =	"yeonji.flacco:main"
fsclean =	"yeonji.fsclean:main"
me2dlc =	"yeonji.me2dlc:main"
mkvthumb =	"yeonji.mkvthumb:main"
pypi =		"yeonji.pypi:main"
ytd =		"yeonji.ytd:main"
ytdlj =		"yeonji.ytdlj:main"
yttag =		"yeonji.yttag:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
