[project]
name = "ytd"
version = "1.0.0"
description = "Context-aware video downloader"
readme = "./README.md"
requires-python = ">=3.6"
license = { file="./LICENSE" }
authors = [ { name="Johannes Krattenmacher", email="ytd@dev.krateng.ch" } ]

urls.repository = "https://github.com/krateng/ytd"

keywords = ["scripts", "commandline"]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent"
]

dependencies = [
	"yt-dlp",
	"appdirs",
	"doreah"
]

[project.scripts]
ytd = "ytd:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
