[project]
name = "dlvh"
version = "1.0.0"
description = "Context-aware video downloader"
readme = "./README.md"
requires-python = ">=3.6"
license = { file="./LICENSE" }
authors = [ { name="Johannes Krattenmacher", email="dlvh@dev.krateng.ch" } ]

urls.repository = "https://github.com/krateng/dlvh"

keywords = ["scripts", "commandline"]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent"
]

dependencies = [
	"yt-dlp",
	"appdirs",
	"doreah"
]

[project.scripts]
dlvh = "dlvh:main"
ytd = "dlvh:main" # alias for compatibility

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
